<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".view.SearchActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_search"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@android:color/white"
        android:backgroundTint="#494949"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tf_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string009" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_album_search" />

    <Button
        android:id="@+id/btn_track_search"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/search_buttons"
        android:text="@string/string006"
        app:layout_constraintEnd_toStartOf="@+id/btn_album_search"
        app:layout_constraintTop_toBottomOf="@+id/ti_search" />

    <Button
        android:id="@+id/btn_album_search"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/search_buttons"
        android:text="@string/string007"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_search" />

    <Button
        android:id="@+id/btn_artist_search"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/search_buttons"
        android:text="@string/string008"
        app:layout_constraintStart_toEndOf="@+id/btn_album_search"
        app:layout_constraintTop_toBottomOf="@+id/ti_search" />

</androidx.constraintlayout.widget.ConstraintLayout>